--- a/style.css
+++ b/style.css
@@ -4,14 +4,18 @@
 }
 
 body {
-  background-image: url(./images/bg-image.jpg);
+  background-image: url(/images/bg-image\ 1.jpg);
   background-repeat: repeat;
   background-attachment: fixed;
+}
+img {
+  width: 10%;
+  margin-top: 20px;
 }
 .Create {
   padding: 10px;
   margin: auto;
-  margin-top: 20%;
+  margin-top: 10%;
   margin-bottom: 0;
   width: 60%;
   border: 3px solid black;
